@@ -989,13 +989,14 @@ SIDSE_B_CS_LM_Normal_R_Dis
 	return
 
 SIDSE_B_CS_LM_Meter
+
+#if 0
 	;; activate level meters
 	bsf	CS_STAT2, CS_STAT2_LEVEL_METERS
 
 	;; trigger level meter whenever gate is active
 
 	SET_BSR	SIDL_BASE
-
 
 	;; left meter
 SIDSE_B_CS_LM_L
@@ -1023,6 +1024,40 @@ SIDSE_B_CS_LM_NotR
 	clrf	METER_VALUES4, BANKED
 	clrf	METER_VALUES7, BANKED
 	SET_BSR	SID_BASE
+#else
 
+SID_SE_B_METER_MACRO MACRO meter, Vx_STATE, Vx_LINEAR_FRQ_H, METER_VALUESx
+	LOCAL	NoGate
+	LOCAL	GateEnd
+
+	movff	Vx_STATE, WREG
+	BRA_IFCLR WREG, SID_V_STATE_GATE_ACTIVE, ACCESS, NoGate
+	movff	Vx_LINEAR_FRQ_H, MIOS_PARAMETER1
+	movlw	meter
+	call	CS_MENU_MATRIX_MeterLinearSet
+	rgoto	GateEnd
+NoGate
+	SET_BSR	METER_VALUESx
+	clrf	METER_VALUESx, BANKED
+	SET_BSR	SID_BASE	
+GateEnd
+	ENDM
+
+	;; show frequencies (much better "show" effect :)
+	SID_SE_B_METER_MACRO 1, SIDL_V1_BASE + SID_Vx_STATE, SIDL_V1_BASE + SID_Vx_LINEAR_FRQ_H, METER_VALUES1
+	SID_SE_B_METER_MACRO 2, SIDL_V2_BASE + SID_Vx_STATE, SIDL_V2_BASE + SID_Vx_LINEAR_FRQ_H, METER_VALUES2
+	SID_SE_B_METER_MACRO 3, SIDL_V3_BASE + SID_Vx_STATE, SIDL_V3_BASE + SID_Vx_LINEAR_FRQ_H, METER_VALUES3
+	SID_SE_B_METER_MACRO 4, SIDR_V1_BASE + SID_Vx_STATE, SIDR_V1_BASE + SID_Vx_LINEAR_FRQ_H, METER_VALUES4
+	SID_SE_B_METER_MACRO 5, SIDR_V2_BASE + SID_Vx_STATE, SIDR_V2_BASE + SID_Vx_LINEAR_FRQ_H, METER_VALUES5
+	SID_SE_B_METER_MACRO 6, SIDR_V3_BASE + SID_Vx_STATE, SIDR_V3_BASE + SID_Vx_LINEAR_FRQ_H, METER_VALUES6
+
+	;; clear remaining meter values
+	SET_BSR	METER_VALUES0
+	clrf	METER_VALUES0, BANKED
+	clrf	METER_VALUES7, BANKED
+	SET_BSR	SID_BASE
+
+
+#endif
 	return
 
